[tool.poetry]
name = "skysql"
version = "0.1.0"
description = ""
authors = ["MightContainNuts <mightcontainnuts@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
pre-commit = "^4.1.0"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
flask = "^3.1.0"
flask-limiter = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
